# student-dropout-risk-prediction

./: .gitignore  .pre-commit-config.yaml  PROJECT_SUMMARY.md  README.md  demo.md  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
.devcontainer/: devcontainer.json
assets/: desktop.ini  streamlit_demo.webm
data/: cli_data.csv  feedback_data.csv  sample_students.csv
models/logistic/: model.joblib  test_data.joblib
models/logistic_tuned/: model.joblib
models/rf/: model.joblib
models/xgb/: model.joblib
models/xgb_tuned/: model.joblib
notebooks/: eda.ipynb  explainability.ipynb  modeling.ipynb
notebooks/.ipynb_checkpoints/: eda-checkpoint.ipynb
results/: MODEL_METRICS.json
scripts/: generate_synthetic.py  run_demo.ps1
student_management/: __init__.py  __main__.py  cli.py  core.py  data_ingest.py  evaluate.py  features.py  init.py  training.py
student_management/explainability/: shap_explainer.py
tests/: test_smoke.py  test_training.py
